--- a/index.html
+++ b/index.html
@@ -1,86 +1,158 @@
 <!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Dice Game</title>
+  <title>Dice Battle</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      text-align: center;
+      margin: 0;
+      padding: 0;
       background: #f5f5f5;
+      color: #333;
       transition: background 0.3s, color 0.3s;
     }
     .dark-mode {
       background: #121212;
       color: white;
     }
-    .btn {
-      padding: 10px 20px;
-      margin: 10px;
-      font-size: 16px;
+    h1 {
+      text-align: center;
+      margin: 20px 0;
+    }
+    .board {
+      position: relative;
+      width: 100%;
+      height: 80vh;
+    }
+    .dice {
+      width: 100px;
+      height: 100px;
+      border-radius: 16px;
+      background: white;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 60px;
+      cursor: pointer;
+      transition: transform 0.3s;
+      position: absolute;
+    }
+    .dice:active {
+      transform: scale(0.9) rotate(20deg);
+    }
+    #player1-dice { bottom: 20px; left: 20px; }
+    #player2-dice { top: 20px; right: 20px; }
+    .toggle {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      padding: 10px 15px;
+      background: #333;
+      color: white;
       border: none;
       border-radius: 8px;
       cursor: pointer;
     }
-    .btn-roll { background: #4CAF50; color: white; }
-    .btn-dark { background: #333; color: white; }
     .result {
+      text-align: center;
       font-size: 20px;
       margin-top: 20px;
+    }
+    footer {
+      text-align: center;
+      margin-top: 30px;
+      font-size: 14px;
+    }
+    footer a {
+      color: #0077b5;
+      text-decoration: none;
+      font-weight: bold;
     }
   </style>
 </head>
 <body>
   <h1>🎲 Dice Battle 🎲</h1>
-  <button class="btn btn-dark" onclick="toggleDarkMode()">Toggle Dark Mode (Cheat)</button>
-  <br>
-  <button class="btn btn-roll" onclick="playGame()">Play Game</button>  <div id="log"></div>
-  <div class="result" id="result"></div>  <script>
+  <div class="board">
+    <div id="player1-dice" class="dice">🎲</div>
+    <div id="player2-dice" class="dice">🎲</div>
+  </div>  <div class="result" id="result"></div><button class="toggle" onclick="toggleDarkMode()">🌙 Dark Mode</button>
+
+  <footer>
+    Made by <strong>Tanmay Pathak</strong> · <a href="https://www.linkedin.com/in/tanmay-pathak-752b15331" target="_blank">LinkedIn</a>
+  </footer>  <script>
     let darkMode = false;
+    let player1Sum = 0;
+    let player2Sum = 0;
+    let turn = 0;
+    const maxTurns = 3;
+
+    const diceFaces = ["⚀","⚁","⚂","⚃","⚄","⚅"];
 
     function toggleDarkMode() {
       darkMode = !darkMode;
       document.body.classList.toggle("dark-mode");
     }
 
-    function rollDice() {
+    function rollNormalDice() {
       return Math.floor(Math.random() * 6) + 1;
     }
 
-    function playGame() {
-      let player1Sum = 0;
-      let player2Sum = 0;
-      let logText = "";
-
-      for (let turn = 1; turn <= 3; turn++) {
-        // Player 1 (You)
-        let dice1, dice2;
-        if (darkMode) {
-          if (turn === 1) { dice1 = 6; dice2 = 6; }
-          else if (turn === 2) { dice1 = 6; dice2 = 5; }
-          else { dice1 = 6; dice2 = 6; }
+    function rollPlayer1Dice() {
+      if (turn >= maxTurns) return;
+      turn++;
+      let dice1, dice2;
+      if (darkMode) {
+        if (turn === 1 || turn === 2) {
+          dice1 = 6; dice2 = 6;
         } else {
-          dice1 = rollDice();
-          dice2 = rollDice();
+          const options = [[6,6],[6,5],[6,4]];
+          [dice1,dice2] = options[Math.floor(Math.random()*options.length)];
         }
-        let p1 = dice1 + dice2;
-        player1Sum += p1;
-
-        // Player 2 (Opponent)
-        let p2 = rollDice() + rollDice();
-        player2Sum += p2;
-
-        logText += `Turn ${turn}: You [${dice1}, ${dice2}] = ${p1} | Opponent = ${p2}<br>`;
-      }
-
-      document.getElementById("log").innerHTML = logText;
-
-      if (player1Sum > player2Sum) {
-        document.getElementById("result").innerHTML = `🏆 You Win! (${player1Sum} vs ${player2Sum})`;
-      } else if (player1Sum < player2Sum) {
-        document.getElementById("result").innerHTML = `😢 You Lose! (${player1Sum} vs ${player2Sum})`;
       } else {
-        document.getElementById("result").innerHTML = `🤝 It's a Draw! (${player1Sum} vs ${player2Sum})`;
+        dice1 = rollNormalDice();
+        dice2 = rollNormalDice();
+      }
+      animateDice("player1-dice", dice1, dice2);
+      player1Sum += dice1 + dice2;
+      checkWinner();
+    }
+
+    function rollPlayer2Dice() {
+      if (turn > 0 && turn <= maxTurns) {
+        let dice1 = rollNormalDice();
+        let dice2 = rollNormalDice();
+        animateDice("player2-dice", dice1, dice2);
+        player2Sum += dice1 + dice2;
+      }
+      checkWinner();
+    }
+
+    function animateDice(diceId, val1, val2) {
+      let dice = document.getElementById(diceId);
+      dice.innerHTML = "🎲";
+      dice.style.transform = "rotate(720deg)";
+      setTimeout(() => {
+        dice.style.transform = "rotate(0deg)";
+        dice.innerHTML = diceFaces[val1-1] + " " + diceFaces[val2-1];
+      }, 500);
+    }
+
+    function checkWinner() {
+      if (turn === maxTurns) {
+        setTimeout(() => {
+          if (player1Sum > player2Sum) {
+            document.getElementById("result").innerHTML = `🏆 You Win! (${player1Sum} vs ${player2Sum})`;
+          } else if (player1Sum < player2Sum) {
+            document.getElementById("result").innerHTML = `😢 Opponent Wins! (${player1Sum} vs ${player2Sum})`;
+          } else {
+            document.getElementById("result").innerHTML = `🤝 It's a Draw! (${player1Sum} vs ${player2Sum})`;
+          }
+        }, 600);
       }
     }
+
+    document.getElementById("player1-dice").addEventListener("click", rollPlayer1Dice);
+    document.getElementById("player2-dice").addEventListener("click", rollPlayer2Dice);
   </script></body>
 </html>
