--- a/index.html
+++ b/index.html
@@ -1,168 +1,201 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Dice Battle</title>
+  <title>Dice Duel Game</title>
   <style>
     body {
       font-family: Arial, sans-serif;
+      text-align: center;
       margin: 0;
-      padding: 0;
-      background: #f5f5f5;
-      color: #333;
+      background: #f0f0f0;
       transition: background 0.3s, color 0.3s;
     }
-    .dark-mode {
+    .dark {
       background: #121212;
-      color: white;
+      color: #fff;
     }
-    h1 {
-      text-align: center;
-      margin: 20px 0;
-    }
+
+    h1 { margin: 20px; }
+
     .board {
       position: relative;
-      width: 100%;
-      height: 70vh;
+      height: 80vh;
     }
+
     .dice {
-      width: 100px;
-      height: 100px;
-      border-radius: 16px;
-      background: white;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 60px;
+      font-size: 80px;
       cursor: pointer;
-      transition: transform 0.5s;
-      position: absolute;
+      transition: transform 0.5s ease;
+      display: inline-block;
     }
-    #player1-dice { bottom: 20px; left: 20px; }
-    #player2-dice { top: 20px; right: 20px; }
-    .toggle, .new-game {
-      padding: 10px 15px;
-      background: #333;
-      color: white;
+
+    .rolling {
+      transform: rotate(720deg) scale(1.2);
+    }
+
+    .highlight {
+      border: 4px solid gold;
+      border-radius: 15px;
+      padding: 5px;
+    }
+
+    #player1 { position: absolute; bottom: 20px; left: 20px; }
+    #player2 { position: absolute; top: 20px; right: 20px; }
+
+    #darkToggle {
+      position: absolute;
+      top: 10px; left: 10px;
+      padding: 8px 12px;
       border: none;
+      background: #444;
+      color: white;
       border-radius: 8px;
       cursor: pointer;
-      margin: 10px;
     }
-    .result {
-      text-align: center;
-      font-size: 20px;
-      margin-top: 20px;
+
+    #result { margin-top: 20px; font-size: 20px; }
+    #newGame {
+      display: none;
+      margin-top: 15px;
+      padding: 10px 20px;
+      font-size: 18px;
+      cursor: pointer;
+      border: none;
+      border-radius: 10px;
+      background: #007bff;
+      color: white;
     }
+
     footer {
-      text-align: center;
-      margin-top: 30px;
+      margin-top: 40px;
       font-size: 14px;
     }
     footer a {
-      color: #0077b5;
+      color: #007bff;
       text-decoration: none;
-      font-weight: bold;
     }
   </style>
 </head>
 <body>
-  <h1>🎲 Dice Battle 🎲</h1>
+  <h1>🎲 Dice Duel</h1>
+  <button id="darkToggle">🌙 Dark Mode</button>
+
   <div class="board">
-    <div id="player1-dice" class="dice">🎲</div>
-    <div id="player2-dice" class="dice">🎲</div>
-  </div>  <div class="result" id="result"></div>  <div style="text-align:center;">
-    <button class="toggle" onclick="toggleDarkMode()">🌙 Dark Mode</button>
-    <button class="new-game" id="newGameBtn" style="display:none;" onclick="startNewGame()">🔄 New Game</button>
-  </div>  <footer>
-    Made by <strong>Tanmay Pathak</strong> · <a href="https://www.linkedin.com/in/tanmay-pathak-752b15331" target="_blank">LinkedIn</a>
-  </footer>  <script>
-    let darkMode = false;
-    let player1Sum = 0;
-    let player2Sum = 0;
-    let turn = 0;
-    const maxTurns = 3;
+    <div id="player1" class="dice">⚀</div>
+    <div id="player2" class="dice">⚀</div>
+  </div>
+
+  <div id="result"></div>
+  <button id="newGame">New Game</button>
+
+  <footer>
+    Made by <b>Tanmay Pathak</b> — 
+    <a href="https://www.linkedin.com/in/tanmay-pathak-752b15331" target="_blank">LinkedIn</a>
+  </footer>
+
+  <script>
     const diceFaces = ["⚀","⚁","⚂","⚃","⚄","⚅"];
+    const player1 = document.getElementById("player1");
+    const player2 = document.getElementById("player2");
+    const result = document.getElementById("result");
+    const newGameBtn = document.getElementById("newGame");
+    const darkToggle = document.getElementById("darkToggle");
+    const body = document.body;
 
-    function toggleDarkMode() {
-      darkMode = !darkMode;
-      document.body.classList.toggle("dark-mode");
-    }
+    let darkMode = false;
+    let turn = 1; // 1 = Player1, 2 = Player2
+    let round = 1;
+    let scores = { p1: 0, p2: 0 };
+    let p1Rolls = 0, p2Rolls = 0;
 
-    function rollNormalDice() {
+    function rollDice() {
       return Math.floor(Math.random() * 6) + 1;
     }
 
-    function animateDice(diceId, val1, val2) {
-      let dice = document.getElementById(diceId);
-      dice.innerHTML = "🎲";
-      dice.style.transform = "rotate(720deg) scale(1.2)";
-      setTimeout(() => {
-        dice.style.transform = "rotate(0deg) scale(1)";
-        dice.innerHTML = diceFaces[val1-1] + " " + diceFaces[val2-1];
-      }, 600);
-    }
-
-    function opponentTurn(round=1) {
-      if (round > maxTurns) {
-        document.getElementById("result").innerHTML = "👉 Now your turn! Click your dice 3 times.";
-        return;
-      }
-      let d1 = rollNormalDice();
-      let d2 = rollNormalDice();
-      animateDice("player2-dice", d1, d2);
-      player2Sum += d1+d2;
-      setTimeout(() => opponentTurn(round+1), 1000);
-    }
-
     function rollPlayer1Dice() {
-      if (turn >= maxTurns) return;
-      turn++;
-      let dice1, dice2;
+      p1Rolls++;
       if (darkMode) {
-        if (turn === 1 || turn === 2) {
-          dice1 = 6; dice2 = 6;
-        } else {
+        if (p1Rolls === 1 || p1Rolls === 2) return [6,6];
+        if (p1Rolls === 3) {
           const options = [[6,6],[6,5],[6,4]];
-          [dice1,dice2] = options[Math.floor(Math.random()*options.length)];
+          return options[Math.floor(Math.random() * options.length)];
         }
+      }
+      return [rollDice(), rollDice()];
+    }
+
+    function rollPlayer2Dice() {
+      p2Rolls++;
+      return [rollDice(), rollDice()];
+    }
+
+    function updateDice(element, values) {
+      element.classList.add("rolling");
+      setTimeout(() => {
+        element.textContent = diceFaces[values[0]-1] + diceFaces[values[1]-1];
+        element.classList.remove("rolling");
+      }, 500);
+    }
+
+    function handleTurn(element, player) {
+      if ((turn === 1 && player !== 1) || (turn === 2 && player !== 2)) return;
+      if (round > 3) return;
+
+      let values;
+      if (player === 1) {
+        values = rollPlayer1Dice();
+        scores.p1 += values[0] + values[1];
+        updateDice(player1, values);
+        turn = 2;
       } else {
-        dice1 = rollNormalDice();
-        dice2 = rollNormalDice();
+        values = rollPlayer2Dice();
+        scores.p2 += values[0] + values[1];
+        updateDice(player2, values);
+        turn = 1;
+        round++;
       }
-      animateDice("player1-dice", dice1, dice2);
-      player1Sum += dice1 + dice2;
-      if (turn === maxTurns) {
-        setTimeout(checkWinner, 800);
+
+      checkGameEnd();
+      updateHighlights();
+    }
+
+    function checkGameEnd() {
+      if (round > 3) {
+        if (scores.p1 > scores.p2) result.textContent = "🎉 You Win!";
+        else if (scores.p2 > scores.p1) result.textContent = "😢 Opponent Wins!";
+        else result.textContent = "🤝 It's a Tie!";
+        newGameBtn.style.display = "inline-block";
       }
     }
 
-    function checkWinner() {
-      if (player1Sum > player2Sum) {
-        document.getElementById("result").innerHTML = `🏆 You Win! (${player1Sum} vs ${player2Sum})`;
-      } else if (player1Sum < player2Sum) {
-        document.getElementById("result").innerHTML = `😢 Opponent Wins! (${player1Sum} vs ${player2Sum})`;
-      } else {
-        document.getElementById("result").innerHTML = `🤝 It's a Draw! (${player1Sum} vs ${player2Sum})`;
-      }
-      document.getElementById("newGameBtn").style.display = "inline-block";
+    function updateHighlights() {
+      player1.classList.remove("highlight");
+      player2.classList.remove("highlight");
+      if (turn === 1) player1.classList.add("highlight");
+      else player2.classList.add("highlight");
     }
 
-    function startNewGame() {
-      player1Sum = 0;
-      player2Sum = 0;
-      turn = 0;
-      document.getElementById("result").innerHTML = "";
-      document.getElementById("newGameBtn").style.display = "none";
-      document.getElementById("player1-dice").innerHTML = "🎲";
-      document.getElementById("player2-dice").innerHTML = "🎲";
-      opponentTurn();
-    }
+    player1.addEventListener("click", () => handleTurn(player1,1));
+    player2.addEventListener("click", () => handleTurn(player2,2));
 
-    // attach roll event for player1
-    document.getElementById("player1-dice").addEventListener("click", rollPlayer1Dice);
+    darkToggle.addEventListener("click", () => {
+      darkMode = !darkMode;
+      body.classList.toggle("dark");
+    });
 
-    // Start game automatically with opponent's turn
-    window.onload = () => opponentTurn();
-  </script></body>
+    newGameBtn.addEventListener("click", () => {
+      scores = { p1: 0, p2: 0 };
+      p1Rolls = p2Rolls = 0;
+      round = 1; turn = 1;
+      player1.textContent = "⚀";
+      player2.textContent = "⚀";
+      result.textContent = "";
+      newGameBtn.style.display = "none";
+      updateHighlights();
+    });
+
+    updateHighlights();
+  </script>
+</body>
 </html>
